# Akooma

./: CMakeLists.txt  README.md  notes.md
.cache/clangd/index/: glad.c.AA2B96ADD76D81B9.idx  glad.h.A1504418F2766731.idx  khrplatform.h.09E5A5B096F051B2.idx  main.c.107FE3CA75695E1B.idx  shader.c.9D0CD4BEEDEE0A8A.idx  shader.h.EAEAE7ADC0100815.idx
assets/bunny/: scene.gltf
include/: camera.h  gui.h  mesh.h  model.h  shader.h
shaders/: frag.glsl  vert.glsl
src/: camera.c  glad.c  gui.c  gui.cpp  main.c  mesh.c  model.c  shader.c
